// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'fixable' 1`] = `
"
skuba lints
Updating skuba... upgrade-skuba

Patch skipped: Add empty exports to Jest files for compliance with TypeScript isolated modules upgrade-skuba

Patch skipped: Update Renovate config to support private SEEK packages - owner does not map to a SEEK preset upgrade-skuba

Patch skipped: Upgrade Node.js Distroless Docker image to -debian12 variant - no Dockerfile found upgrade-skuba

Patch skipped: Add keepAliveTimeout to server listener - no listener file found upgrade-skuba

Patch skipped: Ensure the pnpm package manager version specified in package.json is used in Dockerfiles - no packageManager declaration in package.json found upgrade-skuba

Patch skipped: Collapse duplicate merge keys in .buildkite files - no Buildkite files found upgrade-skuba

Patch skipped: Remove version field from docker-compose files - no docker-compose files found upgrade-skuba

Patch skipped: Update docker image references to use public.ecr.aws and remove --platform flag - no Dockerfile or docker-compose files found upgrade-skuba

Patch skipped: Move .npmrc mounts from tmp/.npmrc to /tmp/.npmrc - no Buildkite files found upgrade-skuba

Patch skipped: Use pinned pnpm version in Dockerfiles - no Dockerfiles found upgrade-skuba

Patch skipped: Remove yarn --ignore-optional flags in Dockerfiles - no Dockerfiles found upgrade-skuba

Patch skipped: Stop bundling inside CDK unit tests - no CDK test files found upgrade-skuba

Patch skipped: Move .npmrc config to pnpm-workspace.yaml - no .npmrc found upgrade-skuba

Patch skipped: Add event handler to log unhandled promise rejections instead of crashing the process - no applicable src/listen.ts entry points found upgrade-skuba

Patch skipped: Update Jest snapshot URLs to the new documentation site - no test files found upgrade-skuba

Patch skipped: Remove Dockerfile syntax directives - no dockerfiles found upgrade-skuba

Patch skipped: Update import for \`apiTokenFromEnvironment\` - no scripts found upgrade-skuba

Patch skipped: Remove Dockerfile syntax directives - no dockerfiles found upgrade-skuba

Patch applied: Rewrite all 'src' imports to be '#src' upgrade-skuba

Patch skipped: Configure \`tsconfig.json\`, \`package.json\` and \`jest.config.ts\` to support custom conditions - no src paths found upgrade-skuba

Patch skipped: Update lambda function configurations to support custom conditions - no lambda configurations to patch upgrade-skuba

Patch skipped: Patch Dockerfiles to copy \`package.json\` - no Dockerfiles found upgrade-skuba
Upgrading project to Node.js 24 and package targets to Node.js 22.14.0
Upgraded project to Node.js 24 and package targets to Node.js 22.14.0

Patch applied: Upgrade Node.js version to 24 and package targets to Node.js 22.14.0+ upgrade-skuba

Patch skipped: Add 'rootDir' to root tsconfig.json compilerOptions - rootDir already set in tsconfig.json upgrade-skuba

Patch skipped: Add 'rootDir' to tsconfig.build.json compilerOptions - no tsconfig.build.json files found upgrade-skuba

Patch skipped: Migrate pnpm workspace to pnpm-plugin-skuba - no pnpm-workspace.yaml found upgrade-skuba
Refreshed .gitignore.
Refreshed .prettierignore.
Refreshed .dockerignore.

Patch skipped: Migrate npm package builds to tsdown - no skuba build-package command found upgrade-skuba

Patch skipped: Migrate tsdown config to 0.21 - no tsdown.config files found upgrade-skuba

Patch skipped: Add module type to package.json to support ESM - type module already present in package.json upgrade-skuba

Patch skipped: Convert module.exports to export default (CommonJS to ESM) - no config files with module.exports or require found upgrade-skuba

Patch skipped: Allow default exports in config files (import-x/no-default-export off) - no eslint.config.* file found upgrade-skuba

Patch skipped: Replace __dirname and __filename with import.meta equivalents - no global variables found to replace upgrade-skuba

Patch skipped: Migrate to Vitest - skipping in integration test environment upgrade-skuba

skuba update complete. upgrade-skuba

Processed skuba lints in <random>s.

ESLint
Processed 4 files in <random>s.

Prettier
Processed 8 files in <random>s.
Formatted 3 files:
b.md
c.json
d.js
"
`;

exports[`'fixable' 2`] = `
"
a/a/a.ts
--------
[33m@@ -1,4 +1,4 @@[39m
[2m  // Imports out-of-order[22m
[32m- import path from 'path';[39m
[2m  import fs from 'fs';[22m
[31m+ import path from 'path';[39m


b.md
----
[33m@@ -2,3 +2,3 @@[39m

[32m- Trailing space [39m
[31m+ Trailing space[39m


c.json
------
[33m@@ -2,3 +2,3 @@[39m
[2m    "key": "value"[22m
[32m-   }[39m
[31m+ }[39m


d.js
----
[2m  // eslint-disable-next-line no-console[22m
[32m-     console.log(process.argv);[39m
[31m+ console.log(process.argv);[39m
"
`;

exports[`'ok --debug' 1`] = `
"
skuba lints
Updating skuba... upgrade-skuba

Patch skipped: Add empty exports to Jest files for compliance with TypeScript isolated modules upgrade-skuba

Patch skipped: Update Renovate config to support private SEEK packages - owner does not map to a SEEK preset upgrade-skuba

Patch skipped: Upgrade Node.js Distroless Docker image to -debian12 variant - no Dockerfile found upgrade-skuba

Patch skipped: Add keepAliveTimeout to server listener - no listener file found upgrade-skuba

Patch skipped: Ensure the pnpm package manager version specified in package.json is used in Dockerfiles - no packageManager declaration in package.json found upgrade-skuba

Patch skipped: Collapse duplicate merge keys in .buildkite files - no Buildkite files found upgrade-skuba

Patch skipped: Remove version field from docker-compose files - no docker-compose files found upgrade-skuba

Patch skipped: Update docker image references to use public.ecr.aws and remove --platform flag - no Dockerfile or docker-compose files found upgrade-skuba

Patch skipped: Move .npmrc mounts from tmp/.npmrc to /tmp/.npmrc - no Buildkite files found upgrade-skuba

Patch skipped: Use pinned pnpm version in Dockerfiles - no Dockerfiles found upgrade-skuba

Patch skipped: Remove yarn --ignore-optional flags in Dockerfiles - no Dockerfiles found upgrade-skuba

Patch skipped: Stop bundling inside CDK unit tests - no CDK test files found upgrade-skuba

Patch skipped: Move .npmrc config to pnpm-workspace.yaml - no .npmrc found upgrade-skuba

Patch skipped: Add event handler to log unhandled promise rejections instead of crashing the process - no applicable src/listen.ts entry points found upgrade-skuba

Patch skipped: Update Jest snapshot URLs to the new documentation site - no test files found upgrade-skuba

Patch skipped: Remove Dockerfile syntax directives - no dockerfiles found upgrade-skuba

Patch skipped: Update import for \`apiTokenFromEnvironment\` - no scripts found upgrade-skuba

Patch skipped: Remove Dockerfile syntax directives - no dockerfiles found upgrade-skuba

Patch applied: Rewrite all 'src' imports to be '#src' upgrade-skuba

Patch skipped: Configure \`tsconfig.json\`, \`package.json\` and \`jest.config.ts\` to support custom conditions - no src paths found upgrade-skuba

Patch skipped: Update lambda function configurations to support custom conditions - no lambda configurations to patch upgrade-skuba

Patch skipped: Patch Dockerfiles to copy \`package.json\` - no Dockerfiles found upgrade-skuba
Upgrading project to Node.js 24 and package targets to Node.js 22.14.0
Upgraded project to Node.js 24 and package targets to Node.js 22.14.0

Patch applied: Upgrade Node.js version to 24 and package targets to Node.js 22.14.0+ upgrade-skuba

Patch skipped: Add 'rootDir' to root tsconfig.json compilerOptions - rootDir already set in tsconfig.json upgrade-skuba

Patch skipped: Add 'rootDir' to tsconfig.build.json compilerOptions - no tsconfig.build.json files found upgrade-skuba

Patch skipped: Migrate pnpm workspace to pnpm-plugin-skuba - no pnpm-workspace.yaml found upgrade-skuba
Refreshed .gitignore.
Refreshed .prettierignore.
Refreshed .dockerignore.

Patch skipped: Migrate npm package builds to tsdown - no skuba build-package command found upgrade-skuba

Patch skipped: Migrate tsdown config to 0.21 - no tsdown.config files found upgrade-skuba

Patch skipped: Add module type to package.json to support ESM - type module already present in package.json upgrade-skuba

Patch skipped: Convert module.exports to export default (CommonJS to ESM) - no config files with module.exports or require found upgrade-skuba

Patch skipped: Allow default exports in config files (import-x/no-default-export off) - no eslint.config.* file found upgrade-skuba

Patch skipped: Replace __dirname and __filename with import.meta equivalents - no global variables found to replace upgrade-skuba

Patch skipped: Migrate to Vitest - skipping in integration test environment upgrade-skuba

skuba update complete. upgrade-skuba

Processed skuba lints in <random>s.

ESLint
Initialising ESLint...
Processing files...
Processed 2 files in <random>s.
○ a/a/a.ts
○ d.js

Prettier
Initialising Prettier...
Detected project root: <random>
Discovering files...
Discovered 9 files.
Formatting files...
.dockerignore
  parser: -
.gitignore
  parser: -
.prettierignore
  parser: -
b.md
  parser: markdown
c.json
  parser: json
d.js
  parser: babel
package.json
  parser: json-stringify
tsconfig.json
  parser: json
a/a/a.ts
  parser: typescript
Processed 6 files in <random>s.
"
`;

exports[`'ok --debug' 2`] = `
"
"
`;

exports[`'ok' 1`] = `
"
skuba lints
Updating skuba... upgrade-skuba

Patch skipped: Add empty exports to Jest files for compliance with TypeScript isolated modules upgrade-skuba

Patch skipped: Update Renovate config to support private SEEK packages - owner does not map to a SEEK preset upgrade-skuba

Patch skipped: Upgrade Node.js Distroless Docker image to -debian12 variant - no Dockerfile found upgrade-skuba

Patch skipped: Add keepAliveTimeout to server listener - no listener file found upgrade-skuba

Patch skipped: Ensure the pnpm package manager version specified in package.json is used in Dockerfiles - no packageManager declaration in package.json found upgrade-skuba

Patch skipped: Collapse duplicate merge keys in .buildkite files - no Buildkite files found upgrade-skuba

Patch skipped: Remove version field from docker-compose files - no docker-compose files found upgrade-skuba

Patch skipped: Update docker image references to use public.ecr.aws and remove --platform flag - no Dockerfile or docker-compose files found upgrade-skuba

Patch skipped: Move .npmrc mounts from tmp/.npmrc to /tmp/.npmrc - no Buildkite files found upgrade-skuba

Patch skipped: Use pinned pnpm version in Dockerfiles - no Dockerfiles found upgrade-skuba

Patch skipped: Remove yarn --ignore-optional flags in Dockerfiles - no Dockerfiles found upgrade-skuba

Patch skipped: Stop bundling inside CDK unit tests - no CDK test files found upgrade-skuba

Patch skipped: Move .npmrc config to pnpm-workspace.yaml - no .npmrc found upgrade-skuba

Patch skipped: Add event handler to log unhandled promise rejections instead of crashing the process - no applicable src/listen.ts entry points found upgrade-skuba

Patch skipped: Update Jest snapshot URLs to the new documentation site - no test files found upgrade-skuba

Patch skipped: Remove Dockerfile syntax directives - no dockerfiles found upgrade-skuba

Patch skipped: Update import for \`apiTokenFromEnvironment\` - no scripts found upgrade-skuba

Patch skipped: Remove Dockerfile syntax directives - no dockerfiles found upgrade-skuba

Patch applied: Rewrite all 'src' imports to be '#src' upgrade-skuba

Patch skipped: Configure \`tsconfig.json\`, \`package.json\` and \`jest.config.ts\` to support custom conditions - no src paths found upgrade-skuba

Patch skipped: Update lambda function configurations to support custom conditions - no lambda configurations to patch upgrade-skuba

Patch skipped: Patch Dockerfiles to copy \`package.json\` - no Dockerfiles found upgrade-skuba
Upgrading project to Node.js 24 and package targets to Node.js 22.14.0
Upgraded project to Node.js 24 and package targets to Node.js 22.14.0

Patch applied: Upgrade Node.js version to 24 and package targets to Node.js 22.14.0+ upgrade-skuba

Patch skipped: Add 'rootDir' to root tsconfig.json compilerOptions - rootDir already set in tsconfig.json upgrade-skuba

Patch skipped: Add 'rootDir' to tsconfig.build.json compilerOptions - no tsconfig.build.json files found upgrade-skuba

Patch skipped: Migrate pnpm workspace to pnpm-plugin-skuba - no pnpm-workspace.yaml found upgrade-skuba
Refreshed .gitignore.
Refreshed .prettierignore.
Refreshed .dockerignore.

Patch skipped: Migrate npm package builds to tsdown - no skuba build-package command found upgrade-skuba

Patch skipped: Migrate tsdown config to 0.21 - no tsdown.config files found upgrade-skuba

Patch skipped: Add module type to package.json to support ESM - type module already present in package.json upgrade-skuba

Patch skipped: Convert module.exports to export default (CommonJS to ESM) - no config files with module.exports or require found upgrade-skuba

Patch skipped: Allow default exports in config files (import-x/no-default-export off) - no eslint.config.* file found upgrade-skuba

Patch skipped: Replace __dirname and __filename with import.meta equivalents - no global variables found to replace upgrade-skuba

Patch skipped: Migrate to Vitest - skipping in integration test environment upgrade-skuba

skuba update complete. upgrade-skuba

Processed skuba lints in <random>s.

ESLint
Processed 2 files in <random>s.

Prettier
Processed 6 files in <random>s.
"
`;

exports[`'ok' 2`] = `
"
"
`;

exports[`'unfixable' 1`] = `
"
skuba lints
Updating skuba... upgrade-skuba

Patch skipped: Add empty exports to Jest files for compliance with TypeScript isolated modules upgrade-skuba

Patch skipped: Update Renovate config to support private SEEK packages - owner does not map to a SEEK preset upgrade-skuba

Patch skipped: Upgrade Node.js Distroless Docker image to -debian12 variant - no Dockerfile found upgrade-skuba

Patch skipped: Add keepAliveTimeout to server listener - no listener file found upgrade-skuba

Patch skipped: Ensure the pnpm package manager version specified in package.json is used in Dockerfiles - no packageManager declaration in package.json found upgrade-skuba

Patch skipped: Collapse duplicate merge keys in .buildkite files - no Buildkite files found upgrade-skuba

Patch skipped: Remove version field from docker-compose files - no docker-compose files found upgrade-skuba

Patch skipped: Update docker image references to use public.ecr.aws and remove --platform flag - no Dockerfile or docker-compose files found upgrade-skuba

Patch skipped: Move .npmrc mounts from tmp/.npmrc to /tmp/.npmrc - no Buildkite files found upgrade-skuba

Patch skipped: Use pinned pnpm version in Dockerfiles - no Dockerfiles found upgrade-skuba

Patch skipped: Remove yarn --ignore-optional flags in Dockerfiles - no Dockerfiles found upgrade-skuba

Patch skipped: Stop bundling inside CDK unit tests - no CDK test files found upgrade-skuba

Patch skipped: Move .npmrc config to pnpm-workspace.yaml - no .npmrc found upgrade-skuba

Patch skipped: Add event handler to log unhandled promise rejections instead of crashing the process - no applicable src/listen.ts entry points found upgrade-skuba

Patch skipped: Update Jest snapshot URLs to the new documentation site - no test files found upgrade-skuba

Patch skipped: Remove Dockerfile syntax directives - no dockerfiles found upgrade-skuba

Patch skipped: Update import for \`apiTokenFromEnvironment\` - no scripts found upgrade-skuba

Patch skipped: Remove Dockerfile syntax directives - no dockerfiles found upgrade-skuba

Patch applied: Rewrite all 'src' imports to be '#src' upgrade-skuba

Patch skipped: Configure \`tsconfig.json\`, \`package.json\` and \`jest.config.ts\` to support custom conditions - no src paths found upgrade-skuba

Patch skipped: Update lambda function configurations to support custom conditions - no lambda configurations to patch upgrade-skuba

Patch skipped: Patch Dockerfiles to copy \`package.json\` - no Dockerfiles found upgrade-skuba
Upgrading project to Node.js 24 and package targets to Node.js 22.14.0
Upgraded project to Node.js 24 and package targets to Node.js 22.14.0

Patch applied: Upgrade Node.js version to 24 and package targets to Node.js 22.14.0+ upgrade-skuba

Patch skipped: Add 'rootDir' to root tsconfig.json compilerOptions - rootDir already set in tsconfig.json upgrade-skuba

Patch skipped: Add 'rootDir' to tsconfig.build.json compilerOptions - no tsconfig.build.json files found upgrade-skuba

Patch skipped: Migrate pnpm workspace to pnpm-plugin-skuba - no pnpm-workspace.yaml found upgrade-skuba
Refreshed .gitignore.
Refreshed .prettierignore.
Refreshed .dockerignore.

Patch skipped: Migrate npm package builds to tsdown - no skuba build-package command found upgrade-skuba

Patch skipped: Migrate tsdown config to 0.21 - no tsdown.config files found upgrade-skuba

Patch skipped: Add module type to package.json to support ESM - type module already present in package.json upgrade-skuba

Patch skipped: Convert module.exports to export default (CommonJS to ESM) - no config files with module.exports or require found upgrade-skuba

Patch skipped: Allow default exports in config files (import-x/no-default-export off) - no eslint.config.* file found upgrade-skuba

Patch skipped: Replace __dirname and __filename with import.meta equivalents - no global variables found to replace upgrade-skuba

Patch skipped: Migrate to Vitest - skipping in integration test environment upgrade-skuba

skuba update complete. upgrade-skuba

Processed skuba lints in <random>s.

ESLint
Processed 2 files in <random>s.

<random>/a/a/a.ts
  8:3  error  Unexpected console statement  no-console

<random>/d.js
  1:1  error  Parsing error: Unexpected token }

✖ 2 problems (2 errors, 0 warnings)


Prettier
Processed 6 files in <random>s.
Formatted 1 file:
a/a/a.ts
Flagged 1 file:
d.js SyntaxError: Unexpected token (1:1)
> 1 | }
    | ^
  2 |

ESLint, Prettier found issues that require triage.
"
`;

exports[`'unfixable' 2`] = `
"
a/a/a.ts
--------
[33m@@ -1,4 +1,4 @@[39m
[2m  // Imports out-of-order[22m
[32m- import path from 'path';[39m
[2m  import fs from 'fs';[22m
[31m+ import path from 'path';[39m

[33m@@ -7,3 +7,3 @@[39m

[32m-   console.log('I forgot to remove this')[39m
[31m+   console.log('I forgot to remove this');[39m
[2m  };[22m"
`;
